--- a/redirect.html
+++ b/redirect.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="5;URL=https://eishinjh.github.io/home">
-<title>HTML入門-ページリダイレクト</title>
+<title>ページリダイレクト</title>
 </head>
 <body>
 <h1>リダイレクト</h1>
