--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>リダイレクト</h1>
-<p>本サイトは移転しました。5秒後にジャンプします。<br>
+<p>ホームへ移動します。5秒後にジャンプします。<br>
 ジャンプしない場合は、以下のURLをクリックしてください。</p>
-<p><a href="https://eishinjh.github.io/home">移転先のページ</a></p>
+<p><a href="https://eishinjh.github.io/home">移動後のページ</a></p>
 </body>
 </html>
